Changes for 3.4.14rc1

New features:
A.F....... [ZBX-1357] enabled Portuguese (Portugal) translation to be displayed by default (zalex_ua)

Bug fixes:
..F....... [ZBX-13015] fixed X axis labels with DST transition in the displayed period (Sasha)
........S. [ZBX-14777] increased severity of housekeeper logs in the case of invalid history/trends intervals (wiper)
........S. [ZBX-14778] fixed housekeeper attempting to remove history of discovery rules/prototypes (wiper)
.......PS. [ZBX-14771] fixed memory leak in poller if scheduling interval is invalid (vso)
.......PS. [ZBX-14775] fixed configuration of the maximum available count of aggregated metrics in a single request to vmware vCenter (MVekslers)
..F....... [ZBX-14676] fixed displaying links containing UTF-8 characters (Ivo)
...G...PS. [ZBX-14756] fixed zbxregexp library not compiling with old versions of pcre; thanks to Simon Matter for the patch (yurii)

--------------------------------------------------------------------------------
Changes for 3.4.13

3.4.13rc2 was released as 3.4.13 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.13rc2

Bug fixes:
.......PS. [ZBX-14765] fixed vmware incorrect memory release (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.4.13rc1

New features:
...G...PS. [ZBX-13730] replaced pcreposix library with pcre, lowered backtracking limit, fixed libevent build issues (yurii)

Bug fixes:
.......PS. [ZBX-14677] fixed vmware performance counter retrieval on installations with large number of datastores (wiper)
........S. [ZBX-14697] fixed memory leak in alert manager when connection to database was lost (vso)
..F....... [ZBX-12293] renamed trigger functions by adding function name at the beginning and removing the operator and "N" and placing operator in a separate field allowing two new operators "<=" and ">=" for selection (Ivo)