@@ -188,7 +188,9 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 	char			*ip, zone[MAX_STRING_LEN], buffer[MAX_STRING_LEN], *zone_str, *param;
 	struct in_addr		inaddr;
 #ifndef _WINDOWS
-#ifdef HAVE_RES_NINIT
+#if defined(HAVE_RES_NINIT) && !defined(_AIX)
+	/* It seems that on some AIX systems with no updates installed res_ninit() can */
+	/* corrupt stack (see ZBX-14559). Use res_init() on AIX. */
 	struct __res_state	res_state_local;
 #else	/* thread-unsafe resolver API */
 	int			saved_nscount = 0, saved_retrans, saved_retry;
@@ -198,8 +200,8 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 #endif
 	typedef struct
 	{
-		char	*name;
-		int	type;
+		const char	*name;
+		int		type;
 	}
 	resolv_querytype_t;
 
@@ -469,7 +471,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		pDnsRecord = pDnsRecord->pNext;
 	}
 #else	/* not _WINDOWS */
-#ifdef HAVE_RES_NINIT
+#if defined(HAVE_RES_NINIT) && !defined(_AIX)
 	memset(&res_state_local, 0, sizeof(res_state_local));
 	if (-1 == res_ninit(&res_state_local))	/* initialize always, settings might have changed */
 #else
@@ -480,7 +482,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		return SYSINFO_RET_FAIL;
 	}
 
-#ifdef HAVE_RES_NINIT
+#if defined(HAVE_RES_NINIT) && !defined(_AIX)
 	if (-1 == (res = res_nmkquery(&res_state_local, QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
 #else
 	if (-1 == (res = res_mkquery(QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
@@ -498,7 +500,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 			return SYSINFO_RET_FAIL;
 		}
 
-#ifdef HAVE_RES_NINIT
+#if defined(HAVE_RES_NINIT) && !defined(_AIX)
 		res_state_local.nsaddr_list[0].sin_addr = inaddr;
 		res_state_local.nsaddr_list[0].sin_family = AF_INET;
 		res_state_local.nsaddr_list[0].sin_port = htons(ZBX_DEFAULT_DNS_PORT);
@@ -514,7 +516,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 #endif
 	}
 
-#ifdef HAVE_RES_NINIT
+#if defined(HAVE_RES_NINIT) && !defined(_AIX)
 	if (0 != use_tcp)
 		res_state_local.options |= RES_USEVC;
 
@@ -522,7 +524,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 	res_state_local.retry = retry;
 
 	res = res_nsend(&res_state_local, buf, res, answer.buffer, sizeof(answer.buffer));
-#	if HAVE_RES_NDESTROY
+#	ifdef HAVE_RES_NDESTROY
 	res_ndestroy(&res_state_local);
 #	else
 	res_nclose(&res_state_local);
